tests/machine/x/c/group_by_multi_join.error
line: 0
error: output mismatch
-- got --
map[part:100 total:0] map[part:200 total:0]
-- want --
map[part:100 total:20] map[part:200 total:15]
   1: #include <stdio.h>
